--- a/package.json
+++ b/package.json
@@ -39,7 +39,15 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "formidable": "^1.2.1",
     "jquery": "^3.3.1",
+    "lowdb": "^1.0.0",
+    "nodemailer": "^6.2.1",
+    "nodemon": "^1.19.1",
     "normalize.css": "^7.0.0"
   }
 }
